adding script tag

--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
   <body>
     <!-- Top Navigation Menu -->
     <nav class="navbar margin-left-right-auto" id="portfolio">
-      <a class="welcome" href="#">Welcome</a>
-      <img src="image/menuBtn.png" alt="menuBtn" class="menuBtn" />
-      <div class="links">
+      <a id="welcome" href="#">Welcome</a>
+      <div id="links">
         <a href="#portfolio">Portfolio</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
       </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <img src="image/menuBtn.png" alt="menuBtn" class="menuBtn" />
+      </a>
     </nav>
     <script>
-      var menuBtn = document.getElementById('.menuBtn');
-      var links = document.getElementById('.links');
-
-      links.style.right = '-200px';
-      menuBtn.onclick = function () {
-        if (links.style.right == '-200px') {
-          links.style.right = '0';
+      function myFunction() {
+        var x = document.getElementById('links');
+        if (x.style.display === 'block') {
+          x.style.display = 'none';
         } else {
-          links.style.right = '-200px';
+          x.style.display = 'block';
         }
-      };
+      }
     </script>
+
     <main>
       <section class="intro">
         <h1 class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
