--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <!-- Top Navigation Menu -->
     <nav class="navbar margin-left-right-auto" id="portfolio">
       <a id="welcome" href="#">Welcome</a>
-      <div class="menu-toggle" id="mobile-menu " ;>
-        <div class="bar"></div>
-        <div class="bar"></div>
+      <div class="menu-toggle" id="mobile-menu">
+        <span class="bar"></span>
+        <span class="bar"></span>
         <span class="bar"></span>
       </div>
       <ul class="nav-menu">
-        <li><a href="#portfolio" class="nav-links">Portfolio</a></li>
-        <li><a href="#about" class="nav-links">About</a></li>
-        <li><a href="#contact" class="nav-links">Contact</a></li>
+        <li class="navbar-item"><a href="#portfolio" class="nav-links">Portfolio</a></li>
+        <li class="navbar-item"><a href="#about" class="nav-links">About</a></li>
+        <li class="navbar-item"><a href="#contact" class="nav-links">Contact</a></li>
       </ul>
     </nav>
 
