--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar margin-left-right-auto" id="portfolio">
       <a id="welcome" href="#">Welcome</a>
       <ul class="nav-menu">
-        <li class="navbar-item"><a href="#portfolio" class="nav-links">Portfolio</a></li>
+        <li class="navbar-item"><a href="#home" class="nav-links">Portfolio</a></li>
         <li class="navbar-item"><a href="#about" class="nav-links">About</a></li>
         <li class="navbar-item"><a href="#contact" class="nav-links">Contact</a></li>
       </ul>
@@ -26,7 +26,7 @@
       </div>
     </nav>
 
-    <main>
+    <main id="home">
       <section class="intro">
         <h1 class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
         <h2 class="subheading margin-left-right-auto">I'm a software developer</h2>
