--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
           </ul>
         </footer>
       </section>
-      <article class="recent">
+      <article class="recent" id="about">
         <img class="vector-img" src="./image/vector.svg" alt="vector" />
-        <h2 class="works-header" id="about">My Recent Works</h2>
+        <h2 class="works-header" >My Recent Works</h2>
         <span class="line"></span>
         <article class="works">
           <div class="grid">
