--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
     <!-- Top Navigation Menu -->
     <nav class="navbar margin-left-right-auto" id="portfolio">
       <div class="navbar__container">
-        <a id="welcome" href="#">Welcome</a>
-        <div class="menu-toggle" id="mobile-menu">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+        <div class="mobile-menu-bar">
+          <a id="welcome" href="#">Welcome</a>
+          <div class="menu-toggle" id="mobile-menu">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <div class="nav-menu-wrapper">
+            <ul class="nav-menu">
+              <li class="navbar-item"><a href="#home" class="nav-links">Portfolio</a></li>
+              <li class="navbar-item"><a href="#about" class="nav-links">About</a></li>
+              <li class="navbar-item"><a href="#contact" class="nav-links">Contact</a></li>
+            </ul>
+          </div>
         </div>
-        <ul class="nav-menu">
-          <li class="navbar-item"><a href="#home" class="nav-links">Portfolio</a></li>
-          <li class="navbar-item"><a href="#about" class="nav-links">About</a></li>
-          <li class="navbar-item"><a href="#contact" class="nav-links">Contact</a></li>
-        </ul>
       </div>
     </nav>
     <main id="home">
