readding new content

--- a/index.html
+++ b/index.html
@@ -12,25 +12,23 @@
   </head>
   <body>
     <!-- Top Navigation Menu -->
-    <nav class="navbar margin-left-right-auto" id="portfolio">
-      <div class="navbar__container">
-        <div class="mobile-menu-bar">
-          <a id="welcome" href="#">Welcome</a>
-          <div class="menu-toggle" id="mobile-menu">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
-          <div class="nav-menu-wrapper">
-            <ul class="nav-menu">
-              <li class="navbar-item"><a href="#home" class="nav-links">Portfolio</a></li>
-              <li class="navbar-item"><a href="#about" class="nav-links">About</a></li>
-              <li class="navbar-item"><a href="#contact" class="nav-links">Contact</a></li>
-            </ul>
-          </div>
+    <div id="navbar-container" margin-left-right-auto id="portfolio">
+      <div class="mobile-menu-bar">
+        <a id="welcome" href="#">Welcome</a>
+        <div class="menu-toggle" id="mobile-menu">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+        <div class="nav-menu-wrapper">
+          <ul class="nav-menu">
+            <li class="navbar-item"><a href="#home" class="nav-links">Portfolio</a></li>
+            <li class="navbar-item"><a href="#about" class="nav-links">About</a></li>
+            <li class="navbar-item"><a href="#contact" class="nav-links">Contact</a></li>
+          </ul>
         </div>
       </div>
-    </nav>
+    </div>
     <main id="home">
       <section class="intro">
         <h1 class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
