fixing the content

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
   </head>
   <body>
     <!-- Top Navigation Menu -->
-    <div id="navbar-container" margin-left-right-auto id="portfolio">
+
+    <div class="navbar-container margin-left-right-auto" id="portfolio">
       <div class="mobile-menu-bar">
         <a id="welcome" href="#">Welcome</a>
+
         <div class="menu-toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
