--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <!-- Top Navigation Menu -->
 
-    <div class="navbar-container margin-left-right-auto" id="portfolio">
+    <nav class="navbar-container margin-left-right-auto">
       <div class="mobile-menu-bar">
         <a id="welcome" href="#">Welcome</a>
 
