fixing nav element

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    </nav>
     <main id="home">
       <section class="intro">
         <h1 class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
