--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
     <!-- Top Navigation Menu -->
 
     <nav class="navbar-container margin-left-right-auto">
-      <div class="mobile-menu-bar">
+      <div class="mobile-menu-bar" id="portfolio">
         <a id="welcome" href="#">Welcome</a>
-
         <div class="menu-toggle" id="mobile-menu">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </div>
-        <div class="nav-menu-wrapper">
-          <ul class="nav-menu">
-            <li class="navbar-item"><a href="#home" class="nav-links">Portfolio</a></li>
-            <li class="navbar-item"><a href="#about" class="nav-links">About</a></li>
-            <li class="navbar-item"><a href="#contact" class="nav-links">Contact</a></li>
-          </ul>
-        </div>
+      </div>
+      <div class="nav-menu-wrapper">
+        <ul class="nav-menu">
+          <li class="navbar-item"><a href="#home" class="nav-links">Portfolio</a></li>
+          <li class="navbar-item"><a href="#about" class="nav-links">About</a></li>
+          <li class="navbar-item"><a href="#contact" class="nav-links">Contact</a></li>
+        </ul>
       </div>
     </nav>
     <main id="home">
