fixing link content

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
         </ul>
       </div>
     </nav>
-    <main id="home">
+    <main >
       <section class="intro">
-        <h1 class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
+        <h1 id="home" class="heading margin-left-right-auto">Hey there.I'm Blessing</h1>
         <h2 class="subheading margin-left-right-auto">I'm a software developer</h2>
 
         <p class="summary margin-left-right-auto">
