--- a/index.html
+++ b/index.html
@@ -266,45 +266,7 @@
         </div>
         <div class="about2"></div>
       </section>
-      <section class="flex-container margin-left-right-auto">
-        <div class="flex-box">
-          <p class="attribute-ellip">
-            <img class="attribute-img" src="./image/language.svg" alt="lang" />
-          </p>
-          <h3 class="attribute-title">Language</h3>
-          <ul class="attri-content">
-            <li class="attribute-tags contrast">Javascript</li>
-            <li class="attribute-tags contrast">Ruby</li>
-            <li class="attribute-tags contrast">Html</li>
-            <li class="attribute-tags contrast">Css</li>
-          </ul>
-        </div>
-        <div class="flex-box">
-          <p class="attribute-ellip">
-            <img class="attribute-img" src="./image/framework.svg" alt="framework" />
-          </p>
-          <h3 class="attribute-title">Framework</h3>
-          <ul class="attri-content">
-            <li class="attribute-tags contrast">Bootstrap</li>
-            <li class="attribute-tags contrast">Ruby</li>
-            <li class="attribute-tags contrast">RSpec</li>
-            <li class="attribute-tags contrast">Capybara</li>
-            <li class="attribute-tags contrast">Selenium</li>
-          </ul>
-        </div>
-        <div class="flex-box">
-          <p class="attribute-ellip">
-            <img class="attribute-img" src="./image/skill.svg" alt="skill" />
-          </p>
-          <h3 class="attribute-title">Skills</h3>
-          <ul class="attri-content">
-            <li class="attribute-tags contrast">Codekit</li>
-            <li class="attribute-tags contrast">Github</li>
-            <li class="attribute-tags contrast">Codepen</li>
-            <li class="attribute-tags contrast">Gitlab</li>
-            <li class="attribute-tags contrast">Terminal</li>
-          </ul>
-        </div>
+      <section class="flex-container">
       </section>
       <section class="contact" id="contact">
         <h4 class="contact-text">
