--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="#" aria-label="button">
+                  <a href="popup.html" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -165,7 +165,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="#" aria-label="button">
+                  <a href="popup.html" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -184,7 +184,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="#" aria-label="button">
+                  <a href="popup.html" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -205,7 +205,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="#" aria-label="button">
+                  <a href="popup.html" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -224,7 +224,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="#top" aria-label="button">
+                  <a href="popup.html" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -243,7 +243,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="#" aria-label="button">
+                  <a href="popup.html" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -266,8 +266,9 @@
         </div>
         <div class="about2"></div>
       </section>
-      <section class="flex-container">
-      </section>
+      <div class="flex-container">
+        <div class="flex-box"></div>
+      </div>
       <section class="contact" id="contact">
         <h4 class="contact-text">
           I'm always interested in hearing about new project, so if you'd like to chat please get in
