--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="popup.html" aria-label="button">
+                  <a href="" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -165,7 +165,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="popup.html" aria-label="button">
+                  <a href="" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -184,7 +184,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="popup.html" aria-label="button">
+                  <a href="" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -205,7 +205,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="popup.html" aria-label="button">
+                  <a href="" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -224,7 +224,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="popup.html" aria-label="button">
+                  <a href="" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -243,7 +243,7 @@
                   <li class="content-tags">html</li>
                 </ul>
                 <div class="content-btn">
-                  <a href="popup.html" aria-label="button">
+                  <a href="" aria-label="button">
                     <button-style class="see-projects">See Project </button-style>
                   </a>
                 </div>
@@ -265,10 +265,48 @@
           </a>
         </div>
         <div class="about2"></div>
+
+        <ul class="flex-container margin-left-right-auto">
+          <li class="flex-box">
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/language.svg" alt="lang" />
+            </p>
+            <h3 class="attribute-title">Language</h3>
+            <ul class="attri-content">
+              <li class="attribute-tags contrast">Javascript</li>
+              <li class="attribute-tags contrast">Ruby</li>
+              <li class="attribute-tags contrast">Html</li>
+              <li class="attribute-tags contrast">Css</li>
+            </ul>
+          </li>
+          <li class="flex-box">
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/framework.svg" alt="framework" />
+            </p>
+            <h3 class="attribute-title">Framework</h3>
+            <ul class="attri-content">
+              <li class="attribute-tags contrast">Bootstrap</li>
+              <li class="attribute-tags contrast">Ruby</li>
+              <li class="attribute-tags contrast">RSpec</li>
+              <li class="attribute-tags contrast">Capybara</li>
+              <li class="attribute-tags contrast">Selenium</li>
+            </ul>
+          </li>
+          <li class="flex-box">
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/skill.svg" alt="skill" />
+            </p>
+            <h3 class="attribute-title">Skills</h3>
+            <ul class="attri-content">
+              <li class="attribute-tags contrast">Codekit</li>
+              <li class="attribute-tags contrast">Github</li>
+              <li class="attribute-tags contrast">Codepen</li>
+              <li class="attribute-tags contrast">Gitlab</li>
+              <li class="attribute-tags contrast">Terminal</li>
+            </ul>
+          </li>
+        </ul>
       </section>
-      <div class="flex-container">
-        
-      </div>
       <section class="contact" id="contact">
         <h4 class="contact-text">
           I'm always interested in hearing about new project, so if you'd like to chat please get in
@@ -391,6 +429,6 @@
         </div>
       </footer>
     </main>
-    <script src="index.js"></script>
+    <script src="index."></script>
   </body>
 </html>
