--- a/index.html
+++ b/index.html
@@ -266,46 +266,7 @@
         </div>
         <div class="about2"></div>
 
-        <ul class="flex-container margin-left-right-auto">
-          <li class="flex-box">
-            <p class="attribute-ellip">
-              <img class="attribute-img" src="./image/language.svg" alt="lang" />
-            </p>
-            <h3 class="attribute-title">Language</h3>
-            <ul class="attri-content">
-              <li class="attribute-tags contrast">Javascript</li>
-              <li class="attribute-tags contrast">Ruby</li>
-              <li class="attribute-tags contrast">Html</li>
-              <li class="attribute-tags contrast">Css</li>
-            </ul>
-          </li>
-          <li class="flex-box">
-            <p class="attribute-ellip">
-              <img class="attribute-img" src="./image/framework.svg" alt="framework" />
-            </p>
-            <h3 class="attribute-title">Framework</h3>
-            <ul class="attri-content">
-              <li class="attribute-tags contrast">Bootstrap</li>
-              <li class="attribute-tags contrast">Ruby</li>
-              <li class="attribute-tags contrast">RSpec</li>
-              <li class="attribute-tags contrast">Capybara</li>
-              <li class="attribute-tags contrast">Selenium</li>
-            </ul>
-          </li>
-          <li class="flex-box">
-            <p class="attribute-ellip">
-              <img class="attribute-img" src="./image/skill.svg" alt="skill" />
-            </p>
-            <h3 class="attribute-title">Skills</h3>
-            <ul class="attri-content">
-              <li class="attribute-tags contrast">Codekit</li>
-              <li class="attribute-tags contrast">Github</li>
-              <li class="attribute-tags contrast">Codepen</li>
-              <li class="attribute-tags contrast">Gitlab</li>
-              <li class="attribute-tags contrast">Terminal</li>
-            </ul>
-          </li>
-        </ul>
+        <ul class="flex-container margin-left-right-auto"></ul>
       </section>
       <section class="contact" id="contact">
         <h4 class="contact-text">
@@ -429,6 +390,6 @@
         </div>
       </footer>
     </main>
-    <script src="index."></script>
+    <script src="index.js"></script>
   </body>
 </html>
