--- a/index.html
+++ b/index.html
@@ -265,8 +265,52 @@
           </a>
         </div>
         <div class="about2"></div>
-
-        <ul class="flex-container margin-left-right-auto"></ul>
+        <ul class="flex-container margin-left-right-auto">
+          <li class="flex-box">
+            <p class="attribute-ellip">
+              <img class="attribute-img" src="./image/language.svg" alt="skill" />
+            </p>
+            <h3 class="attribute-title">language</h3>
+            <ul class="attri-content">
+              <li class="flex-box">
+                <p class="attribute-ellip">
+                  <img class="attribute-img" src="./image/language.svg" alt="skill" />
+                </p>
+                <h3 class="attribute-title">Language</h3>
+                <ul class="attri-content">
+                  <li class="attribute-tags contrast">Javascript</li>
+                  <li class="attribute-tags contrast">Ruby</li>
+                  <li class="attribute-tags contrast">Html</li>
+                  <li class="attribute-tags contrast">Css</li>
+                </ul>
+              </li>
+              <li class="flex-box">
+                <p class="attribute-ellip">
+                  <img class="attribute-img" src="./image/framework.svg" alt="skill" />
+                </p>
+                <h3 class="attribute-title">Framework</h3>
+                <ul class="attri-content">
+                  <li class="attribute-tags contrast">Javascript</li>
+                  <li class="attribute-tags contrast">Ruby</li>
+                  <li class="attribute-tags contrast">Html</li>
+                  <li class="attribute-tags contrast">Css</li>
+                </ul>
+              </li>
+              <li class="flex-box">
+                <p class="attribute-ellip">
+                  <img class="attribute-img" src="./image/skill.svg" alt="skill" />
+                </p>
+                <h3 class="attribute-title">Skills</h3>
+                <ul class="attri-content">
+                  <li class="attribute-tags contrast">Javascript</li>
+                  <li class="attribute-tags contrast">Ruby</li>
+                  <li class="attribute-tags contrast">Html</li>
+                  <li class="attribute-tags contrast">Css</li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </section>
       <section class="contact" id="contact">
         <h4 class="contact-text">
