--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           </a>
         </div>
         <div class="about2"></div>
-        <ul class="flex-container margin-left-right-auto">
+        <ul class="flex-container margin-left-right-auto" id="about-me-card-wrapper">
           <li class="flex-box">
             <p class="attribute-ellip">
               <img class="attribute-img" src="./image/language.svg" alt="skill" />
@@ -277,36 +277,21 @@
                   <img class="attribute-img" src="./image/language.svg" alt="skill" />
                 </p>
                 <h3 class="attribute-title">Language</h3>
-                <ul class="attri-content">
-                  <li class="attribute-tags contrast">Javascript</li>
-                  <li class="attribute-tags contrast">Ruby</li>
-                  <li class="attribute-tags contrast">Html</li>
-                  <li class="attribute-tags contrast">Css</li>
-                </ul>
+                <ul class="attri-content"></ul>
               </li>
               <li class="flex-box">
                 <p class="attribute-ellip">
                   <img class="attribute-img" src="./image/framework.svg" alt="skill" />
                 </p>
                 <h3 class="attribute-title">Framework</h3>
-                <ul class="attri-content">
-                  <li class="attribute-tags contrast">Javascript</li>
-                  <li class="attribute-tags contrast">Ruby</li>
-                  <li class="attribute-tags contrast">Html</li>
-                  <li class="attribute-tags contrast">Css</li>
-                </ul>
+                <ul class="attri-content"></ul>
               </li>
               <li class="flex-box">
                 <p class="attribute-ellip">
                   <img class="attribute-img" src="./image/skill.svg" alt="skill" />
                 </p>
                 <h3 class="attribute-title">Skills</h3>
-                <ul class="attri-content">
-                  <li class="attribute-tags contrast">Javascript</li>
-                  <li class="attribute-tags contrast">Ruby</li>
-                  <li class="attribute-tags contrast">Html</li>
-                  <li class="attribute-tags contrast">Css</li>
-                </ul>
+                <ul class="attri-content"></ul>
               </li>
             </ul>
           </li>
