--- a/index.html
+++ b/index.html
@@ -261,13 +261,11 @@
         </p>
         <div class="about-btn">
           <a href="#" target="_blank" aria-label="button">
-            <button-type class="btn">Get My Resume </button-type>
-          </a>
+            <button-type class="btn">Get My Resume </button-type></a
+          >
         </div>
         <div class="about2"></div>
-        <ul class="flex-container margin-left-right-auto" id="about-me-card-wrapper">
-          
-            </ul>
+        <ul class="flex-container margin-left-right-auto" id="about-me-card-wrapper"></ul>
       </section>
       <section class="contact" id="contact">
         <h4 class="contact-text">
