implementing new prop object

--- a/index.html
+++ b/index.html
@@ -133,124 +133,12 @@
         <img class="vector-img" src="./image/vector.svg" alt="vector" />
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
-        <article class="works">
-          <div class="grid">
-            <div class="grid-item">
-              <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
-                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
-                <ul class="card-content margin-left-right-auto">
-                  <li class="content-tags">Ruby on rails</li>
-                  <li class="content-tags">css</li>
-                  <li class="content-tags">Javascript</li>
-                  <li class="content-tags">html</li>
-                </ul>
-                <div class="content-btn">
-                  <a href="" aria-label="button">
-                    <button-style class="see-projects">See Project </button-style>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item">
-              <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
-                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
-                <ul class="card-content margin-left-right-auto">
-                  <li class="content-tags">Ruby on rails</li>
-                  <li class="content-tags">css</li>
-                  <li class="content-tags">Javascript</li>
-                  <li class="content-tags">html</li>
-                </ul>
-                <div class="content-btn">
-                  <a href="" aria-label="button">
-                    <button-style class="see-projects">See Project </button-style>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item">
-              <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
-                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
-                <ul class="card-content margin-left-right-auto">
-                  <li class="content-tags">Ruby on rails</li>
-                  <li class="content-tags">css</li>
-                  <li class="content-tags">Javascript</li>
-                  <li class="content-tags">html</li>
-                </ul>
-                <div class="content-btn">
-                  <a href="" aria-label="button">
-                    <button-style class="see-projects">See Project </button-style>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
-        <article class="works">
-          <div class="grid">
-            <div class="grid-item">
-              <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
-                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
-                <ul class="card-content margin-left-right-auto">
-                  <li class="content-tags">Ruby on rails</li>
-                  <li class="content-tags">css</li>
-                  <li class="content-tags">Javascript</li>
-                  <li class="content-tags">html</li>
-                </ul>
-                <div class="content-btn">
-                  <a href="" aria-label="button">
-                    <button-style class="see-projects">See Project </button-style>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item">
-              <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
-                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
-                <ul class="card-content margin-left-right-auto">
-                  <li class="content-tags">Ruby on rails</li>
-                  <li class="content-tags">css</li>
-                  <li class="content-tags">Javascript</li>
-                  <li class="content-tags">html</li>
-                </ul>
-                <div class="content-btn">
-                  <a href="" aria-label="button">
-                    <button-style class="see-projects">See Project </button-style>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="grid">
-            <div class="grid-item">
-              <div class="card">
-                <img class="card-img" src="./image/Screenshot.png" alt="page" />
-                <h3 class="card-header">Multi-Post Stories Gain+Glory</h3>
-                <ul class="card-content margin-left-right-auto">
-                  <li class="content-tags">Ruby on rails</li>
-                  <li class="content-tags">css</li>
-                  <li class="content-tags">Javascript</li>
-                  <li class="content-tags">html</li>
-                </ul>
-                <div class="content-btn">
-                  <a href="" aria-label="button">
-                    <button-style class="see-projects">See Project </button-style>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </article>
+        <div class="works">
+          <ul class="grid"></ul>
+        </div>
+        <div class="works">
+          <ul class="grid"></ul>
+        </div>
       </article>
       <section class="about">
         <h2 class="about-header">About Me</h2>
