--- a/index.html
+++ b/index.html
@@ -133,12 +133,7 @@
         <img class="vector-img" src="./image/vector.svg" alt="vector" />
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
-        <div class="works">
-          <ul class="grid"></ul>
-        </div>
-        <div class="works">
-          <ul class="grid"></ul>
-        </div>
+        <div class="works"></div>
       </article>
       <section class="about">
         <h2 class="about-header">About Me</h2>
