fixing new codes

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <h2 class="works-header">My Recent Works</h2>
         <span class="line"></span>
         <div class="works"></div>
+        <div class="detail-container"></div>
       </article>
       <section class="about">
         <h2 class="about-header">About Me</h2>
